--- a/css/style.css
+++ b/css/style.css
@@ -4520,6 +4520,7 @@ a:hover {
   }
 }
 
+/*main-fq*/
 .main-fq .main__text {
   font-weight: 700;
   font-size: 36px;
@@ -4738,64 +4739,9 @@ a:hover {
   color: #55d1ad;
 }
 
-.main-registration {
-  overflow: hidden;
-  padding-top: 180px;
-}
-
-@media screen and (max-width: 1280px) {
-  .main-registration {
-    padding-top: 130px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .main-registration {
-    padding: 0;
-  }
-}
-
-.main-registration__inner {
-  display: flex;
-  justify-content: center;
-  align-items: end;
-}
-
-@media screen and (max-width: 768px) {
-  .main-registration__inner {
-    flex-direction: column-reverse;
-    align-items: center;
-  }
-}
-
-.main-registration__images {
-  display: flex;
-  align-items: flex-start;
-  position: relative;
-  z-index: 3;
-  flex-shrink: 0;
-}
-
-@media screen and (max-width: 1280px) {
-  .main-registration__images {
-    width: 400px;
-  }
-}
-
-@media screen and (max-width: 991px) {
-  .main-registration__images {
-    width: 350px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .main-registration__images {
-    width: 300px;
-    bottom: -80px;
-  }
-}
-
+/*registration*/
 .registration {
+  font-family: 'Open Sans';
   position: relative;
   box-shadow: 5px 5px 6px rgba(0, 0, 0, 0.15);
   border-radius: 15px;
@@ -4804,6 +4750,7 @@ a:hover {
   left: -50px;
   bottom: 80px;
   text-align: center;
+  width: 600px;
 }
 
 @media screen and (max-width: 1280px) {
@@ -4815,6 +4762,7 @@ a:hover {
 @media screen and (max-width: 768px) {
   .registration {
     left: 0;
+    width: 100%;
     bottom: -100px;
   }
 }
@@ -4823,18 +4771,11 @@ a:hover {
   border: 1px solid #B7B7B7;
   border-radius: 40px;
   height: 50px;
-  width: 400px;
-}
-
-@media screen and (max-width: 991px) {
-  .registration .input {
-    width: 350px;
-  }
+  width: 100%;
 }
 
 @media screen and (max-width: 768px) {
   .registration .input {
-    width: 100%;
     font-size: 12px;
     padding: 0 15px;
   }
@@ -4905,13 +4846,14 @@ a:hover {
   position: absolute;
   right: 16px;
   top: 16px;
+  cursor: pointer;
 }
 
 .registration__email {
   margin-bottom: 22px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 991px) {
   .registration__email {
     margin-bottom: 13px;
   }
@@ -4957,8 +4899,7 @@ a:hover {
   font-weight: 400;
   font-size: 12px;
   color: #bf5b5b;
-  -moz-text-align-last: left;
-  text-align-last: left;
+  text-align: left;
   margin-bottom: 14px;
 }
 
@@ -4970,7 +4911,7 @@ a:hover {
 
 .registration__button {
   background: #32b28c;
-  width: 289px;
+  max-width: 289px;
   height: 50px;
   font-weight: 600;
   font-size: 14px;
@@ -4983,6 +4924,7 @@ a:hover {
     font-weight: 500;
     font-size: 13px;
     margin: 0 auto 15px;
+    max-width: 100%;
   }
 }
 
@@ -5009,78 +4951,441 @@ a:hover {
   }
 }
 
-.registration-employer1 .see {
+/*main-registration*/
+.main-registration {
+  overflow: hidden;
+  padding-top: 180px;
+}
+
+@media screen and (max-width: 1280px) {
+  .main-registration {
+    padding-top: 130px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main-registration {
+    padding: 0;
+  }
+}
+
+.main-registration__inner {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+}
+
+@media screen and (max-width: 768px) {
+  .main-registration__inner {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+}
+
+.main-registration__images {
+  display: flex;
+  align-items: flex-start;
+  position: relative;
+  z-index: 3;
+  flex-shrink: 0;
+}
+
+@media screen and (max-width: 1280px) {
+  .main-registration__images {
+    width: 400px;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .main-registration__images {
+    width: 350px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main-registration__images {
+    width: 300px;
+    bottom: -80px;
+  }
+}
+
+.main-registration.registration-employer1 .see {
   display: none;
 }
 
-.registration-employer1 .not-see {
+.main-registration.registration-employer1 .not-see {
   display: flex;
 }
 
-.registration-employer2 .see {
+.main-registration.registration-employer2 .see {
   display: flex;
 }
 
-.registration-employer2 .not-see {
+.main-registration.registration-employer2 .not-see {
   display: none;
 }
 
-.registration-employer2 .input {
+.main-registration.registration-employer2 .input {
   border: 1px solid #32b28c;
 }
 
-.registration-employer3 .see {
+.main-registration.registration-employer3 .see {
   display: flex;
 }
 
-.registration-employer3 .not-see {
+.main-registration.registration-employer3 .not-see {
   display: none;
 }
 
-.registration-employer3 .registration__password-input {
+.main-registration.registration-employer3 .registration__password-input {
   border: 1px solid #bf5b5b;
 }
 
-.registration-employer4 .registration__email {
+.main-registration.registration-employer4 .registration__email {
   margin-bottom: 90px;
 }
 
 @media screen and (max-width: 768px) {
-  .registration-employer4 .registration__email {
+  .main-registration.registration-employer4 .registration__email {
     margin-bottom: 13px;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .registration-employer4 .registration__title {
+  .main-registration.registration-employer4 .registration__title {
     margin-bottom: 23px;
   }
 }
 
-.registration-employer5 .see {
+.main-registration.registration-employer5 .see {
   display: none;
 }
 
-.registration-employer5 .not-see {
+.main-registration.registration-employer5 .not-see {
   display: flex;
 }
 
-.registration-employer5 .registration__password-new {
+.main-registration.registration-employer5 .registration__password-new {
   margin-bottom: 22px;
 }
 
 @media screen and (max-width: 768px) {
-  .registration-employer5 .registration__password-new {
+  .main-registration.registration-employer5 .registration__password-new {
     margin-bottom: 13px;
   }
 }
 
-.registration-employer5 .registration__password-confirm {
+.main-registration.registration-employer5 .registration__password-confirm {
   margin-bottom: 48px;
 }
 
 @media screen and (max-width: 768px) {
-  .registration-employer5 .registration__password-confirm {
+  .main-registration.registration-employer5 .registration__password-confirm {
     margin-bottom: 13px;
   }
+}
+
+.main-register .registration__inner {
+  padding: 20px 0 40px;
+}
+
+@media screen and (max-width: 1280px) {
+  .main-register .registration__inner {
+    padding: 30px 0;
+  }
+}
+
+.main-register .registration__title {
+  width: 300px;
+  margin: 0 auto 35px;
+}
+
+@media screen and (max-width: 1280px) {
+  .main-register .registration__title {
+    margin: 0 auto 20px;
+    width: 100%;
+  }
+}
+
+.main-register .registration__text {
+  max-width: 450px;
+  font-size: 14px;
+  font-weight: 600;
+  margin: 0 auto;
+}
+
+.main-register .registration__text span {
+  color: #11A0F0;
+}
+
+.main-register .registration__text p {
+  margin-bottom: 50px;
+}
+
+@media screen and (max-width: 1280px) {
+  .main-register .registration__text p {
+    padding: 0 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main-register .registration__text p {
+    margin-bottom: 35px;
+    text-align: left;
+  }
+}
+
+.main-register .registration__choice {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 400px;
+  margin: 0 auto;
+  margin-bottom: 35px;
+  letter-spacing: 0.055em;
+  text-transform: uppercase;
+  color: #9e9e9e;
+  border-bottom: 1px solid #9e9e9e;
+  cursor: pointer;
+  transition: 300ms;
+}
+
+.main-register .registration__choice p {
+  width: 50%;
+  position: relative;
+  padding-bottom: 8px;
+}
+
+.main-register .registration__choice p:before {
+  content: '';
+  display: inline-block;
+  width: 100%;
+  height: 2px;
+  background: transparent;
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  transition: 300ms;
+}
+
+.main-register .registration__choice p:hover {
+  color: #000;
+}
+
+.main-register .registration__choice p:hover:before {
+  background: #32b28c;
+}
+
+@media screen and (max-width: 1280px) {
+  .main-register .registration__choice {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main-register .registration__choice {
+    font-weight: 600;
+    font-size: 12px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .main-register .registration .mb-20 {
+    margin-bottom: 10px;
+  }
+}
+
+.main-register .registration__contact {
+  margin: 30px 0;
+  font-weight: 400;
+  font-size: 14px;
+  letter-spacing: 0.055em;
+  text-transform: uppercase;
+}
+
+@media screen and (max-width: 1280px) {
+  .main-register .registration__contact {
+    margin: 15px 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main-register .registration__contact {
+    margin: 25px 0 20px;
+    font-size: 12px;
+  }
+}
+
+.main-register .registration__button {
+  margin: 55px auto 30px;
+}
+
+@media screen and (max-width: 1280px) {
+  .main-register .registration__button {
+    margin: 30px auto 15px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main-register .registration__button {
+    margin: 13px auto;
+  }
+}
+
+.main-register .registration__personal-data {
+  color: rgba(102, 102, 102, 0.5);
+  font-size: 12px;
+  margin-bottom: 30px;
+}
+
+.main-register .registration__personal-data a {
+  color: #9e9e9e;
+  border-bottom: 1px solid #9e9e9e;
+}
+
+.main-register .registration__personal-data a:hover {
+  color: #55d1ad;
+  border-bottom: 1px solid #55d1ad;
+}
+
+@media screen and (max-width: 768px) {
+  .main-register .registration__personal-data {
+    margin-bottom: 20px;
+  }
+}
+
+.main-register .registration__next-step {
+  display: flex;
+  width: 120px;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+
+.main-register .registration__next-step li {
+  width: 18px;
+  height: 3px;
+  background: #9e9e9e;
+}
+
+.main-register .registration__next-step li:first-child {
+  background: #32b28c;
+}
+
+@media screen and (max-width: 768px) {
+  .main-register .registration__next-step {
+    width: 70px;
+  }
+  .main-register .registration__next-step li {
+    width: 13px;
+  }
+}
+
+.main-register.registration-employer7 .see {
+  display: flex;
+}
+
+.main-register.registration-employer7 .not-see {
+  display: none;
+}
+
+.main-register.registration-employer7 .mb-20 {
+  margin-bottom: 20px;
+}
+
+@media screen and (max-width: 991px) {
+  .main-register.registration-employer7 .mb-20 {
+    margin-bottom: 13px;
+  }
+}
+
+.main-register.registration-employer7 .registration__button {
+  margin: 20px auto;
+  background: #9e9e9e;
+}
+
+.main-register.registration-employer8 .see {
+  display: flex;
+}
+
+.main-register.registration-employer8 .not-see {
+  display: none;
+}
+
+.main-register.registration-employer8 .mb-20 {
+  margin-bottom: 20px;
+}
+
+@media screen and (max-width: 991px) {
+  .main-register.registration-employer8 .mb-20 {
+    margin-bottom: 13px;
+  }
+}
+
+.main-register.registration-employer8 .registration__password-error {
+  max-width: 340px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.main-register.registration-employer8 .registration__button {
+  margin: 12px auto 54px;
+  background: #9e9e9e;
+}
+
+.main-register.registration-employer8 .registration__email.input {
+  border: 1px solid #32b28c;
+}
+
+.main-register.registration-employer8 .registration__password .input {
+  border: 1px solid #bf5b5b;
+}
+
+.main-register.registration-employer8 .registration__next-step li:nth-child(2) {
+  background: #32b28c;
+}
+
+.main-register.registration-employer8 .registration__next-step li:nth-child(3) {
+  background: #32b28c;
+}
+
+.main-register.registration-employer9 .see {
+  display: flex;
+}
+
+.main-register.registration-employer9 .not-see {
+  display: none;
+}
+
+.main-register.registration-employer9 .mb-20 {
+  margin-bottom: 20px;
+}
+
+@media screen and (max-width: 991px) {
+  .main-register.registration-employer9 .mb-20 {
+    margin-bottom: 13px;
+  }
+}
+
+.main-register.registration-employer9 .registration__password-error {
+  max-width: 340px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.main-register.registration-employer9 .registration__button {
+  margin: 12px auto 54px;
+  background: #9e9e9e;
+}
+
+.main-register.registration-employer9 .registration__next-step li:nth-child(2) {
+  background: #32b28c;
+}
+
+.main-register.registration-employer9 .registration__next-step li:nth-child(3) {
+  background: #32b28c;
 }
